# biz-dev-agent

./: .gitignore  CLAUDE_CODE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  env.example  install.sh  pyproject.toml
examples/: fintech-leads.json  healthtech-research.json
src/bd_agent/: __init__.py  agent.py  cli.py  model.py  onboarding.py  prompts.py  schemas.py  tools.py
